--- a/css/dash.css
+++ b/css/dash.css
@@ -9,6 +9,7 @@ body {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
+    background-color: #edede9;
 }
 
 /* .logo{
@@ -38,12 +39,13 @@ body {
 
 
 .dash{
-    height: 600px;
+    height: 700px;
     width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #d6ccc2;
     
 }
 
